--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     tools:context=".MainActivity">
 
     <com.example.focusflow.CircularTimerView
@@ -15,27 +16,50 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.2" />
 
     <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="25:00"
-        android:textSize="40sp"
+        android:textSize="45sp"
         android:textStyle="bold"
+        android:textColor="#333333"
         app:layout_constraintBottom_toBottomOf="@id/timerView"
         app:layout_constraintLeft_toLeftOf="@id/timerView"
         app:layout_constraintRight_toRightOf="@id/timerView"
         app:layout_constraintTop_toTopOf="@id/timerView" />
+
+    <SeekBar
+        android:id="@+id/sbTime"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:max="60"
+        android:progress="25"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/timerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="拖动调整时长"
+        android:textSize="12sp"
+        android:textColor="#888888"
+        app:layout_constraintTop_toBottomOf="@id/sbTime"
+        app:layout_constraintStart_toStartOf="@id/sbTime"
+        app:layout_constraintEnd_toEndOf="@id/sbTime"/>
 
     <Button
         android:id="@+id/btnStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="开始专注"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/timerView"
+        android:backgroundTint="#6200EE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sbTime"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
